--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-measure": "^2.0.2",
     "react-scripts": "1.1.4",
     "reactstrap": "^5.0.0"
   },
